[package]
name = "rvpacker-txt-rs"
version = "9.0.5"
edition = "2021"

[dependencies]
sys-locale = "0.3.2"
clap = { version = "4.5.48", features = ["wrap_help", "cargo", "derive"] }
color-print = "0.3.7"
rpgmad-lib = "3.0.0"
rvpacker-lib = { package = "rvpacker-txt-rs-lib", version = "9.0.4" }
encoding_rs = "0.8.35"
asset_decrypter = { package = "rpgm-asset-decrypter-lib", version = "2.1.0" }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
getset = "0.1.6"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
strum_macros = "0.27.2"
serde = "1.0.228"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
