[package]
name = "rvpacker-txt-rs"
version = "11.2.0"
edition = "2024"

[dependencies]
sys-locale = "0.3.2"
clap = { version = "4.5.60", features = ["wrap_help", "cargo", "derive"] }
color-print = "0.3.7"
rpgmad-lib = "4.0.0"
rvpacker-lib = { package = "rvpacker-txt-rs-lib", version = "11.2.0" }
encoding_rs = "0.8.35"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
strum_macros = "0.28.0"
serde = "1.0.228"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
strum = { version = "0.28.0", features = ["strum_macros"] }
